less/header-style.less
/* ... */
// Social icons, logo and companyname
.flex-shopbasket,
.flex-logo,
.flex-companyname {
    -webkit-box-flex: 0;
    -moz-box-flex: 0;
    -webkit-flex: 0 1 auto;
    -ms-flex: 0 1 auto;
    flex: 0 1 auto;
}

// Navigation widget
.flex-nav {
    -webkit-box-flex: 1;
    -moz-box-flex: 1;
    -webkit-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    @media @tablet {
        width: 100%;
        .navigation-toggle {
            height: 40px;
        }
    }
}

// Spacing for logo and company name on tablet and mobile

@media @tablet {
    .flex-logo {
        width: 100%;
        text-align: center;
        .widget {
            margin: 0 0 5px;
        }
    }
    .flex-companyname {
        width: 100%;
        margin-top: 5px;
        text-align: center;

        .widget {
            margin-bottom: 15px;
            @media @mobile {
                margin-bottom: 0;
            }
        }
    }
}

@media @mobile {
    .flex-companyname {
        margin-bottom: 5px;
    }
}



// Tablet top bar background
// -------------------------

.flex-shopbasket .widget + .tablet-top-bar {
    @media @tablet {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 46px;
        background-color: @color__navigation--background;
        z-index: -1;
    }
}


// Shopping Basket
// -------------------------


.ecombasket {
    .basket-item-details a,
    .basket-item-details p {
        text-align: left;
        font-size: bkscale(@font__p--font-size,0.8);
        line-height: bkscale(@font__p--line-height,0.8);
    }
}

.flex-shopbasket {
    min-height: 44px;
    .ecombasket .view-basket.button:hover {
        color: @color-swatch1;
    }
}




// Brand
// -------------------------

.logo {
  margin-right: 10px;
  @media @tablet {
    margin-right: 0;
    margin-bottom: 5px;
  }
}

.company-link:hover {
    color: @font-swatch6-color;
    text-decoration: none;
    .transition( all, 0.5s, ease );
}




// Navigation
// -------------------------

// Parent nav items, adds arrow icon
.item-name--parent:after {
    display: inline-block;
    vertical-align: middle;
    content: "";
    margin-left: 4px;
    border: 5px solid transparent;
    border-top-color: @font-swatch6-color;
}
.item-name--parent:hover:after {
    border-top-color: @font-swatch6-color-hover;
}

// Selected nav item

.navigation-item.selected > .item-name {
    color: @font-swatch6-color-hover;
}

// Hide toggle on desktop
.navigation-toggle {
    display: none;
    // Toggle Button when store is off line
    @media @tablet {
        border: 1px solid darken(@color-swatch1, 10%);
        -webkit-border-radius: 3px;
        -moz-border-radius: 3px;
        border-radius: 3px;
        min-height: inherit;
        display: inline-block;
        position: absolute;
        height: 40px;
        width: 40px;
        right: 0;
        top: 0;
        text-indent: 1000px;
        overflow: hidden;
        line-height: 0;
        background-color: transparent;
        z-index: 9999999;
        &:before {
            content: '';
            position: absolute;
            height: 3px;
            top: -4px;
            left: 0;
            margin-left: 5px;
            width: 30px;
            right: 0;
            margin-top: 15px;
            background: @color-swatch4;
            box-shadow: 0 7px 0 @color-swatch4;
            .transition( all, 0.5s, ease );
        }
        &:after {
            content: '';
            position: absolute;
            width: 30px;
            left: 0;
            margin-right: -5px;
            height: 3px;
            top: 10px;
            right: 0;
            margin-top: 15px;
            background: @color-swatch4;
            .transition( all, 0.5s, ease );
        }
    }
    &:hover {
        background-color: transparent;
        border: 1px solid lighten(@color-swatch4, 20%);
        &:before {
            background: lighten(@color-swatch4, 20%);
            box-shadow: 0 7px 0 lighten(@color-swatch4, 20%);
        }
        &:after {
            background: lighten(@color-swatch4, 20%);
        }
    }
}

// Toggle Button Open State
.open & {
    &.navigation-toggle {
        background-color: transparent;
        &:before {
            width: 26px;
            margin-top: 21px;
            margin-left: 6px;
            background: @color-swatch4;
            box-shadow: none;
            -webkit-transform: rotate(45deg);
            -moz-transform: rotate(45deg);
            -o-transform: rotate(45deg);
            -ms-transform: rotate(45deg);
            transform: rotate(45deg);
            .transition( all, 0.5s, ease );
        }
        &:after {
            content: '';
            position: absolute;
            width: 26px;
            height: 3px;
            top: -4px;
            left: 50%;
            right: 0;
            margin-top: 21px;
            margin-left: -12px;
            background: @color-swatch4;
            box-shadow: none;
            -webkit-transform: rotate(-45deg);
            -moz-transform: rotate(-45deg);
            -o-transform: rotate(-45deg);
            -ms-transform: rotate(-45deg);
            transform: rotate(-45deg);
            .transition( all, 0.5s, ease );
        }
        &:hover {
            &:after,
            &:before {
                background: lighten(@color-swatch4, 20%);
            }
        }
    }
}

.extendednavigation.open {
    .navigation-body {
        padding-top: 40px;
    }
    .open {
        margin-bottom: 15px;
    }
}
/* ... */

